# rust_app

./: .gitmodules  README.md
linear_regression/: Cargo.toml
linear_regression/src/: main.rs
mnist_classify/: Cargo.toml  weight.hdf5
mnist_classify/src/: main.rs
mnist_read/: Cargo.toml
mnist_read/src/: main.rs
numpy_read/: Cargo.toml
numpy_read/src/: main.rs
rust_gpu_affine/: Cargo.toml  Dockerfile  Dockerfile_ubuntu-22.04-cuda-11.8  Dockerfile_ubuntu-22.04-cuda-11.8-llvm-9  build.rs  rust-toolchain
rust_gpu_affine/gpu_kernel/: Cargo.toml
rust_gpu_affine/src/: main.rs
sdl2_opengl_triangle/: Cargo.toml
sdl2_opengl_triangle/src/: main.rs
simple_mnist_classify/src/: main.rs
simple_multi_classfied/: Cargo.toml
simple_multi_classfied/src/: main.rs
simple_multi_classified/: Cargo.toml
simple_neural_network/: Cargo.toml
simple_neural_network/src/: main.rs
simple_wasm/: Cargo.toml  README.md
simple_wasm/src/: lib.rs
wasm_canvas/: Cargo.toml
wasm_canvas/src/: lib.rs
wasm_webgl_triangle/: Cargo.toml  Makefile
wasm_webgl_triangle/src/: lib.rs
webfrontend_sample/: Cargo.toml
webfrontend_sample/document_root/: index.html  webasm_canvas.html  webasm_greet.html
webfrontend_sample/document_root/simple_wasm/: simple_wasm.js  simple_wasm_bg.wasm
webfrontend_sample/document_root/wasm_canvas/: wasm_canvas.js  wasm_canvas_bg.wasm
webfrontend_sample/src/: greet.rs  main.rs
webfrontend_sample/templates/: greet.stpl
