[package]
name = "rust_gpu_affine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cust = { version = "0.3", path = "../../Rust-CUDA/crates/cust" }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rand_pcg = { version = "0.3.1" }

[build-dependencies]
cuda_builder = { version = "0.3", path = "../../Rust-CUDA/crates/cuda_builder" }