[package]
name = "simple_multi_classfied"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
plotters = { version = "0.3.4" }
linear_transform = { path = "../submodules/rust_libraries/linear_transform" }
deep_learning = { path = "../submodules/rust_libraries/deep_learning" }
